--- a/src/pages/styles/AboutMe.css
+++ b/src/pages/styles/AboutMe.css
@@ -1,23 +1,21 @@
 .about-container {
-  position: relative;
   width: 100%;
-  min-height: 100vh;
-  background-color: transparent;
+  padding: 4rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  justify-content: center;
 }
 
-
 .about-content {
-  position: relative;
-  z-index: 1;
   text-align: center;
   color: white;
   perspective: 1000px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 6rem 1rem;
 }
 
 .profile-img {
@@ -49,11 +47,11 @@ p {
 }
 
 .tech-section {
-  margin-top: 3rem;
-  width: 90%;
-  max-width: 1000px;
   text-align: center;
-  z-index: 1;
+  width: 100%;
+  max-width: 1000px;
+  padding: 6rem 1rem;
+  margin: 0 auto;
 }
 
 .tech-section h2 {
